prevent div shifting when active class is  added

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     flex: 1;
     display: flex;
     gap: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .classic {
@@ -66,7 +66,7 @@ body {
 }
 
 .tileContainer {
-    flex: 1;
+   flex: 1; 
    display: flex;
    flex-direction: column;
 }
@@ -77,6 +77,7 @@ body {
 }
 
 .bottom {
+    margin-top: 20px;
     display: flex;
     gap: 10px;
 }
@@ -115,4 +116,5 @@ body {
 
 .active {
     border: solid black 3px;
+    padding: 2px 7px;
 }
